Card container fixed, added letter spacing to cards

--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,16 @@ button {
     position: absolute;
     bottom: 31%;
     left: 4%;
-    font-size: 2rem; }
+    font-size: 2rem;
+    letter-spacing: 1px; }
     @media (max-width: 48em) {
       .card-container-front__card-number {
         font-size: 1.8rem; } }
   @media (max-width: 48em) {
     .card-container-front {
-      width: 75%; } }
+      width: 90%;
+      margin-top: -20%;
+      z-index: 100; } }
 
 .card-bottom-container {
   font-weight: 500;
@@ -40,7 +43,10 @@ button {
   justify-content: space-between;
   width: 75%; }
   .card-bottom-container__owner-name {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+  .card-bottom-container__expiration-date {
+    letter-spacing: 1px; }
   @media (max-width: 48em) {
     .card-bottom-container {
       width: 90%;
@@ -78,10 +84,12 @@ button {
     position: absolute;
     top: 40.5%;
     right: 10.5%;
-    font-size: 1.8rem; }
+    font-size: 1.8rem;
+    letter-spacing: 1px; }
     @media (max-width: 48em) {
       .card-container-back .card-container-back__CVC {
-        font-size: 1.6rem; } }
+        font-size: 1.4rem;
+        top: 41.5%; } }
 
 .card-container {
   display: flex;
@@ -91,7 +99,7 @@ button {
   @media (max-width: 48em) {
     .card-container {
       flex-direction: column-reverse;
-      width: 100%;
+      width: 85%;
       gap: 0px; } }
 
 .input-container__form {
@@ -208,4 +216,5 @@ main {
       flex-direction: column;
       gap: 0;
       justify-content: space-around;
-      height: 100%; } }
+      height: 100%;
+      align-items: center; } }
