--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,5 +48,6 @@ main {
     gap: 0;
     justify-content: space-around;
     height: 100%;
+    align-items: center;
   }
 }
