--- a/sass/partials/cardContainer/_cardBack.scss
+++ b/sass/partials/cardContainer/_cardBack.scss
@@ -16,9 +16,11 @@
     top: 40.5%;
     right: 10.5%;
     font-size: 1.8rem;
+    letter-spacing: 1px;
 
     @include phone {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
+      top: 41.5%;
     }
   }
 }
