--- a/sass/partials/cardContainer/_cardContainer.scss
+++ b/sass/partials/cardContainer/_cardContainer.scss
@@ -6,7 +6,7 @@
 
   @include phone {
     flex-direction: column-reverse;
-    width: 100%;
+    width: 85%;
     gap: 0px;
   }
 }
