--- a/sass/partials/cardContainer/cardFront/_cardBottom.scss
+++ b/sass/partials/cardContainer/cardFront/_cardBottom.scss
@@ -9,9 +9,11 @@
 
   &__owner-name {
     text-transform: uppercase;
+    letter-spacing: 1px;
   }
 
   &__expiration-date {
+    letter-spacing: 1px;
   }
 
   @include phone {
