--- a/sass/partials/cardContainer/cardFront/_cardFront.scss
+++ b/sass/partials/cardContainer/cardFront/_cardFront.scss
@@ -11,6 +11,7 @@
     bottom: 31%;
     left: $card-left;
     font-size: 2rem;
+    letter-spacing: 1px;
 
     @include phone {
       font-size: 1.8rem;
@@ -18,6 +19,8 @@
   }
 
   @include phone {
-    width: 75%;
+    width: 90%;
+    margin-top: -20%;
+    z-index: 100;
   }
 }
